support transparent "non" spell

--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
 		["diffindo", "confringo", "expelliarmus", "bombarda"],
 		["levioso", "arresto", "glacius", "transformation"],
 		["accio", "flipendo", "descendo", "depulso"],
-		["desillusionment", "avadakedavra", "imperio", "crucio"]
+		["none", "avadakedavra", "imperio", "crucio"]
 	],
 
 	"":""
